# rubyruby

./: fail.py
eiwork/: pixi.toml
eiwork/configs/: config_full_example.yml
hrubin_fixed/: README.md  rubin_overview.html  run_explain.py
hrubin_fixed/app/: rubin_ui_src.jsx  server.py
hrubin_fixed/docs/: architektur.md
hrubin_fixed/rubin/: settings.py
hrubin_fixed/tests/: test_uplift_metrics.py
iowork/app/: rubin_ui_src.jsx
iowork/docs/: README_DE.md  app_build.md
krubin_fixed/: app.sh  rubin_overview.html
krubin_fixed/app/: rubin_ui_src.jsx  server.py
krubin_fixed/configs/: config_catboost_intensiv.yml  config_dml_focus.yml  config_external_eval.yml  config_holdout_production.yml  config_lgbm_intensiv.yml  (+2 more)
megawork/: rubin_overview.html
miniwork/: rubin_overview.html
rub/: pixi.toml  requirements.txt
rubin_fix/: pyproject.toml
rubin_fix/app/: requirements_app.txt  rubin_ui_src.jsx  server.py
rubin_fix/configs/: config_dml_focus.yml  config_explainability.yml
rubin_fix/rubin/: settings.py
rubin_fix/rubin/evaluation/: __init__.py  drtester_plots.py
rubin_fix/rubin/pipelines/: analysis_pipeline.py  data_prep_pipeline.py
rubin_fix/rubin/utils/: plot_theme.py
rubin_fix/tests/: test_data_utils.py
rubin_fixed/: rubin_overview.html  run_analysis.py  run_dataprep.py
rubin_fixedend/: rubin_overview.html
schrubin_fixed/: pyproject.toml  rubin_overview.html
schwork/: rubin_overview.html
wework/: README.md  rubin_overview.html
worker/: rubin_overview.html
working/: README.md  rubin_overview.html  run_dataprep.py
workster/: rubin_overview.html
worksters/: README.md  rubin_overview.html  run_explain.py
workt/: rubin_overview.html
workwork/: requirements.txt  rubin_overview.html  run_production.py  run_promote.py
zrubin_fixed/: rubin_overview.html
zwork/: run_analysis.py
(+226 files in other folders)
